Fixed APIDoc for token
