# app/Http/Controllers/API/SwaggerSecurity.php
@@ -1,10 +1,0 @@
-<?php
-/**
- * @SWG\SecurityScheme(
- *   securityDefinition="Bearer",
- *   type="apiKey",
- *   in="query",
- *   name="token"
- * )
- */
-?>
